Squashing some bugs
New response and popularQuestions introduced some bugs.
Also, currently a bug with question creation changing questionList
state. Possibly because of new state introduced in Question by Vivian.
Should discuss this

--- a/scripts/base.css
+++ b/scripts/base.css
@@ -13,6 +13,12 @@ body {
 	font-family: "Varela Round";
 	letter-spacing: -0.2px;
 	text-align: center;
+	margin-bottom: 10px;
+}
+
+.logo {
+	height: 40px;
+	width: 40px;
 }
 
 /* Question ----------------------------------------*/
@@ -261,8 +267,8 @@ body {
 }
 
 svg {
-	width: 100%;
-	height: 100%;
+	/*width: 100%;
+	height: 100%;*/
 }
 
 path.slice{
